site plan added

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Planing</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>White Water Rafting Site Planing</h1>
+    <h2>Barry Leidy</h2>
+    <h2>WDD 130-08</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,18 +19,18 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>This website will be used to inform people about white water rafting, and allow them to sign up with our company to go on a white water rafting expedition.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>The type of person I think will be visiting this site is outdoors man who like nature so we will have the site be nature themed, I will be using lemon font with bold black letters. they will probably be using phones for accessing this website. </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="wwr logo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -42,21 +42,23 @@
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
     <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      target="_blank">https://coolors.co/94ae89-f9e7e7-2b2118-0e6ba8-036016</a>
 
     <table class="colors">
+      <!--https://coolors.co/94ae89-f9e7e7-2b2118-0e6ba8-036016-->
       <tr>
-        <th>Primary</th>
-        <th>Secondary</th>
-        <th>Accent 1</th>
-        <th>Accent 2</th>
+        <th>Primary</th>036016
+        <th>Secondary</th>2B2118
+        <th>Accent 1</th>0E6BA8
+        <th>Accent 2</th>94AE89
       </tr>
+      <!--https://coolors.co/94ae89-f9e7e7-2b2118-0e6ba8-036016-->
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
-        <td class="accent2"></td>
+        <td class="primary">036016</td>
+        <td class="secondary">2B2118</td>
+        <td class="accent1">0E6BA8</td>
+        <td class="accent2">94AE89</td>
       </tr>
     </table>
 
