moved index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <h1>Barry Leidy - Portal Web Page</h1> 
 
-        <img src="pic for ge.jpg" alt="Barry pic">
+        <img src="pic-for-ge.jpg" alt="Barry pic">
 
         <p>I am Barry Leidy, I am from Florida. This is my second semester. I am studying computer science. I enjoy playing volley ball and snowboarding</p>
 
