--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portal Web Page</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="https://www.byui.edu/">byui main page</a>
-            </nav>
-        </header>
 
-        <h1>Barry Leidy - Portal Web Page</h1> 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portal Web Page</title>
+</head>
 
-        <img src="pic-for-ge.jpg" alt="Barry pic">
+<body>
+    <header>
+        <nav>
+            <a href="wwr/index.html">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+            <a href="positioning.html">Positioning Activity</a>
+            <a href="#">Personal Website</a>
+            <a href="#">Personal Siteplan</a>
+        </nav>
+    </header>
 
-        <p>I am Barry Leidy, I am from Florida. This is my second semester. I am studying computer science. I enjoy playing volley ball and snowboarding</p>
+    <h1>Barry Leidy - Portal Web Page</h1>
 
-        <footer>
-            This is my footer
-        </footer>
-    </body>
+    <img src="pic-for-ge.jpg" alt="Barry pic">
+
+    <p>I am Barry Leidy, I am from Florida. This is my second semester. I am studying computer science. I enjoy playing
+        volley ball and snowboarding</p>
+
+    <footer>
+        This is my footer
+    </footer>
+</body>
+
 </html>
