changed text colors for practice

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Web Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -22,10 +23,11 @@
 
     <img src="pic-for-ge.jpg" alt="Barry pic">
 
-    <p>I am Barry Leidy, I am from Florida. This is my second semester. I am studying computer science. I enjoy playing
-        volley ball and snowboarding</p>
+    <p id="first">A paragraph about me</p>
+    <p class="plain">I am Barry Leidy, I am from Florida. This is my second semester. I am studying computer science. I
+        enjoy playing volley ball and snowboarding</p>
 
-    <footer>
+    <footer id="last" class="plain">
         This is my footer
     </footer>
 </body>
