--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
     <header>
         <a id="logo-link" href="index.html">
-            <img src="logo.png" alt="Dry Oar Logo" class="logo">
+            <img src="images/logo.png" alt="Dry Oar Logo" class="logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -19,7 +22,7 @@
     </header>
     <div>
         <div id="hero-box">
-            <img id="hero-img" src="hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting" class="hero">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -31,42 +34,46 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="rivers.jpg" alt="river in forest">
-            <img class="icon" src="river_icon.png" alt="river icon">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="camping.jpg" alt="tent in mountains">
-            <img class="icon" src="fire_icon.png" alt="fire icon">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="rapids.jpg" alt="rafting boat">
-            <img class="icon" src="oars.png" alt="oars icon">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <img class="mountains" src="mountains.jpg" alt="Misty mountains">
+        <div id="background"></div> 
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class='join' href="rivers.html">Join Us</a>
+            <h3>More Than Just The Thrill</h3>
+            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just
+                the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great
+                outdoors. </p>
+            <a class='join' href="images/rivers.html">Join Us</a>
         </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 20XX - Barry Leidy</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p>Dry Oar &copy; 2024 - Barry Leidy</p>
+        <p><a class="the-plan" href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
-                <img src="facebook.png" alt="fb icon">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
-                <img src="twitter.png" alt="twitter icon">
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
-                <img src="instagram.png" alt="instagram icon">
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
 </body>
+
 </html>
