--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="wwr/index.html">White Water Rafting Website</a>
+            <a href="wwr/index.html" target="_blank">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
             <a href="positioning.html">Positioning Activity</a>
             <a href="#">Personal Website</a>
