--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <a href="wwr/index.html" target="_blank">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
+            <a href="projects/positioning/positioning/positioning.html">Positioning Activity</a>
             <a href="#">Personal Website</a>
             <a href="#">Personal Siteplan</a>
         </nav>
