--- a/car_detailing/site_plan.html
+++ b/car_detailing/site_plan.html
@@ -64,7 +64,7 @@
         Heading Font: [Courier New]  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Brush Script MT]  <!-- change this -->
+        Paragraph Font: [Brush Script MT, Helvetica, sans-serif]  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
