added the wireframe

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -30,7 +30,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="wwr logo.jpg" alt="Logo image" />
+    <img src="images/wwr logo.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -119,7 +119,7 @@
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="images/wireframe_wwr.jpg" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
 
