added second site (rivers)

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
+                <a href="rivers.html">Rivers</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
@@ -53,7 +53,7 @@
             <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
                 <h3>More Than Just The Thrill</h3>
-                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than
+                <p id="bottom_text">Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than
                     just
                     the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great
                     outdoors. </p>
