--- a/car_detailing/site_plan.html
+++ b/car_detailing/site_plan.html
@@ -182,7 +182,9 @@
       </h2>
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
-
+        <img src="img/home_pic.jpg" alt="home_page">
+        <img src="img/services_pic.jpg" alt="services_page">
+        <img src="img/contact_pic.jpg" alt="contact_page">
       <h3>Home</h3>
       <p>         
         [Any additional details about home that the wireframe does not make clear]
