added specification for wireframes

--- a/car_detailing/site_plan.html
+++ b/car_detailing/site_plan.html
@@ -182,8 +182,11 @@
       </h2>
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
+      <p>home page</p>
         <img src="img/home_pic.jpg" alt="home_page">
+      <p>services page</p>
         <img src="img/services_pic.jpg" alt="services_page">
+      <p>contact page</p>
         <img src="img/contact_pic.jpg" alt="contact_page">
       <h3>Home</h3>
       <p>         
