--- a/car_detailing/site_plan.html
+++ b/car_detailing/site_plan.html
@@ -182,29 +182,19 @@
       </h2>
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
+      <h3>Home</h3>
       <p>home page</p>
         <img src="img/home_pic.jpg" alt="home_page">
-      <p>services page</p>
+
+      <h3>services</h3>
+      <p>         
+        <p>services page</p>
         <img src="img/services_pic.jpg" alt="services_page">
-      <p>contact page</p>
+
+      <h3>contact</h3>
+      <p>         
+        <p>contact page</p>
         <img src="img/contact_pic.jpg" alt="contact_page">
-      <h3>Home</h3>
-      <p>         
-        [Any additional details about home that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="home page wireframe">
-
-      <h3>[Page 2]</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
-
-      <h3>[Page 3]</h3>
-      <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 3 wireframe">
     </main>
   </body>
 
