--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header>
+        <a id="logo-link" href="index.html">
+            <img src="images/logo.png" alt="Dry Oar Logo" class="logo">
+        </a>
+        <nav>
+            <a href="index.html" target="_blank">Home</a>
+            <a href="#" target="_blank">Page 2</a>
+            <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
+            <a href="contactus.html" target="_blank">Contact Us</a>
+        </nav>
+    </header>
+
     <div id="feedback"></div>
 
     <script>
@@ -26,6 +38,22 @@
             document.body.classList.toggle('moveDown');
         });
     </script>
-    
+
+    <footer>
+        <p>Dry Oar &copy; 2024 - Barry Leidy</p>
+        <p><a class="the-plan" href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
