--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -13,10 +13,10 @@
                 <img src="images/logo.png" alt="Dry Oar Logo" class="logo">
             </a>
             <nav>
-                <a href="index.html" target="_blank">Home</a>
-                <a href="rivers.html" target="_blank">Rivers</a>
+                <a href="index.html" >Home</a>
+                <a href="rivers.html" >Rivers</a>
                 <a href="site-plan-rafting.html" target="_blank">Site Plan</a>
-                <a href="contactus.html" target="_blank">Contact Us</a>
+                <a href="contactus.html" >Contact Us</a>
             </nav>
         </header>
         <div id="grid_content">
