added the html to all 3 pages

--- a/car_detailing/index.html
+++ b/car_detailing/index.html
@@ -1,12 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style/styles.css">
 </head>
+
 <body>
-    
+    <div id="contents">
+        <header>
+            <a id="logo-link" href="index.html">
+                <img src="img/detail_logo.png" alt="detailing Logo" class="logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="services.html">services</a>
+                <a href="site_plan.html" target="_blank">Site Plan</a>
+                <a href="contact.html">Contact Us</a>
+            </nav>
+        </header>
+
+        <section id="home_info">
+            <p>
+                [Welcome to Busted knuckles detailing, Your Car Detailing Experts! At Busted knuckles detailing, we
+                understand that your car is more
+                than just a mode of transportation; it's a reflection of your personality and style. That's why we offer
+                a range of professional car
+                detailing services to keep your vehicle looking its best. This company was started by the founders
+                Lauklan Shipley and Clay Maddison
+                in an attempt to keep your cars clean.
+            </p>
+            <p>
+                Why Choose Us?Expertise: Our team consists of highly trained professionals with years of experience
+                in the industry. We know cars inside and out and use only the best products and techniques to ensure a
+                flawless finish.
+                Convenience: We offer flexible scheduling options to fit your busy lifestyle. Whether you need a quick
+                wash or a full detail, we've got you covered.
+                Quality Service: Customer satisfaction is our top priority. We take pride in our work and strive to
+                exceed your expectations every time.]
+            </p>
+        </section>
+        <div id="home_imgs">
+            <img src="img/owners.jpg" alt="owners">
+            <img src="img/clean_car.jpg" alt="clean car">
+        </div>
+        <section id="images_home">
+
+        </section>
+        <footer>
+            <p>Dry Oar &copy; 2024 - Barry Leidy</p>
+            <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="img/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="img/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="img/instagram.png" alt="instagram icon">
+                </a>
+        </footer>
+    </div>
 </body>
+
 </html>
