--- a/car_detailing/site_plan.html
+++ b/car_detailing/site_plan.html
@@ -139,9 +139,9 @@
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [What We Offer
+        [What We Offer,
         Exterior Detailing
-        Our exterior detailing services are designed to enhance the appearance of your vehicle's exterior, protect its paint, and restore its shine. Our services include:
+        Our exterior and interior detailing services are designed to enhance the appearance of your vehicle's exterior and interior, protect its paint, and restore its shine. Our services include:
         
         Hand Washing: Gentle hand washing to remove dirt, grime, and contaminants from your vehicle's exterior.
         Paint Correction: Removing imperfections such as swirl marks, scratches, and oxidation to restore your paint's finish.
