added syle to home page

--- a/car_detailing/index.html
+++ b/car_detailing/index.html
@@ -17,13 +17,12 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="services.html">services</a>
-                <a href="site_plan.html" target="_blank">Site Plan</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
         </header>
 
         <section id="home_info">
-            <p>
+            <p id="intro_comp">
                 [Welcome to Busted knuckles detailing, Your Car Detailing Experts! At Busted knuckles detailing, we
                 understand that your car is more
                 than just a mode of transportation; it's a reflection of your personality and style. That's why we offer
@@ -32,7 +31,7 @@
                 Lauklan Shipley and Clay Maddison
                 in an attempt to keep your cars clean.
             </p>
-            <p>
+            <p id="more_info">
                 Why Choose Us?Expertise: Our team consists of highly trained professionals with years of experience
                 in the industry. We know cars inside and out and use only the best products and techniques to ensure a
                 flawless finish.
@@ -50,7 +49,7 @@
 
         </section>
         <footer>
-            <p>Dry Oar &copy; 2024 - Barry Leidy</p>
+            <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
