--- a/car_detailing/services.html
+++ b/car_detailing/services.html
@@ -15,7 +15,6 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="services.html">services</a>
-                <a href="site_plan.html" target="_blank">Site Plan</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
         </header>
@@ -51,7 +50,7 @@
             </p>
         </section>
         <footer>
-            <p>Dry Oar &copy; 2024 - Barry Leidy</p>
+            <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
