--- a/car_detailing/contact.html
+++ b/car_detailing/contact.html
@@ -15,7 +15,6 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="services.html">services</a>
-                <a href="site_plan.html" target="_blank">Site Plan</a>
                 <a href="contact.html">Contact Us</a>
             </nav>
         </header>
@@ -31,7 +30,7 @@
         <img src="img/falling_money.jpg" alt="money">
         <img src="img/happy_car.jpg" alt="happy">
         <footer>
-            <p>Dry Oar &copy; 2024 - Barry Leidy</p>
+            <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
