--- a/car_detailing/index.html
+++ b/car_detailing/index.html
@@ -42,8 +42,8 @@
             </p>
         </section>
         <div id="home_imgs">
-            <img src="img/owners.jpg" alt="owners">
-            <img src="img/clean_car.jpg" alt="clean car">
+            <img src="img/owners.jpg" alt="owners" id="owner">
+            <img src="img/clean_car.jpg" alt="clean car" id="clean_car">
         </div>
         <section id="images_home">
 
