--- a/car_detailing/site_plan.html
+++ b/car_detailing/site_plan.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="style/styles.css">
+    <link type="text/css" rel="stylesheet" href="style/styles_site_plan.css">
   </head>
 
   <body>
