changed dropdown name

--- a/car_detailing/services.html
+++ b/car_detailing/services.html
@@ -112,7 +112,7 @@
             <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
             <div class="social">
-                <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                <button onclick="myFunction()" class="dropbtn">Socials</button>
                 <div id="myDropdown" class="dropdown-content">
                     <a href="https://facebook.com" target="_blank">
                         <img src="img/facebook.png" alt="fb icon">
