added style to services page

--- a/car_detailing/index.html
+++ b/car_detailing/index.html
@@ -66,16 +66,16 @@
             </nav>
         </header>
 
+        <h1 id="intro_comp">
+            [Welcome to Busted knuckles detailing, Your Car Detailing Experts! At Busted knuckles detailing, we
+            understand that your car is more
+            than just a mode of transportation; it's a reflection of your personality and style. That's why we offer
+            a range of professional car
+            detailing services to keep your vehicle looking its best. This company was started by the founders
+            Lauklan Shipley and Clay Maddison
+            in an attempt to keep your cars clean.
+        </h1>
         <section id="home_info">
-            <p id="intro_comp">
-                [Welcome to Busted knuckles detailing, Your Car Detailing Experts! At Busted knuckles detailing, we
-                understand that your car is more
-                than just a mode of transportation; it's a reflection of your personality and style. That's why we offer
-                a range of professional car
-                detailing services to keep your vehicle looking its best. This company was started by the founders
-                Lauklan Shipley and Clay Maddison
-                in an attempt to keep your cars clean.
-            </p>
             <p id="more_info">
                 Why Choose Us?Expertise: Our team consists of highly trained professionals with years of experience
                 in the industry. We know cars inside and out and use only the best products and techniques to ensure a
