--- a/car_detailing/services.html
+++ b/car_detailing/services.html
@@ -71,9 +71,8 @@
             Our exterior and interior detailing services are designed to enhance the appearance of your vehicle's
             exterior and interior, protect its paint, and restore its shine.
         </h1>
-
-        <section id="exterior">
-            <p>
+        <div id="grid_serv">
+            <p id="exterior">
                 Hand Washing: Gentle hand washing to remove dirt, grime, and contaminants from your vehicle's exterior.
                 Paint Correction: Removing imperfections such as swirl marks, scratches, and oxidation to restore your
                 paint's finish.
@@ -91,12 +90,9 @@
                 Engine Bay Detailing: Cleaning and detailing of the engine bay to remove dirt, grease, and grime and
                 enhance the appearance of your engine.
             </p>
-            <img src="img/outside_cleaning.jpg" alt="exterior">
-        </section>
-
-        <section id="interior">
-            <img src="img/inside_cleaning.jpg" alt="interior">
-            <p>
+            <img src="img/outside_cleaning.jpg" alt="exterior" id="ext_pic">
+            <img src="img/inside_cleaning.jpg" alt="interior" id="int_pic">
+            <p id="int">
                 Vacuuming: Thorough vacuuming of carpets, upholstery, and floor mats to remove dirt, debris, and pet
                 hair.
                 Interior Cleaning: Cleaning and conditioning of all interior surfaces, including dashboard, door panels,
@@ -107,7 +103,7 @@
                 and fading.
                 Additional Services.
             </p>
-        </section>
+        </div>
         <footer>
             <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
