fixed html errors

--- a/car_detailing/index.html
+++ b/car_detailing/index.html
@@ -46,12 +46,12 @@
     }
 </style>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style/styles.css">
-</head>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
+<link rel="stylesheet" href="style/styles.css">
+
 
 <body>
     <div id="contents">
@@ -75,7 +75,7 @@
             Lauklan Shipley and Clay Maddison
             in an attempt to keep your cars clean.
         </h1>
-        <section id="home_info">
+        <div id="home_info">
             <p id="more_info">
                 Why Choose Us?Expertise: Our team consists of highly trained professionals with years of experience
                 in the industry. We know cars inside and out and use only the best products and techniques to ensure a
@@ -85,14 +85,11 @@
                 Quality Service: Customer satisfaction is our top priority. We take pride in our work and strive to
                 exceed your expectations every time.]
             </p>
-        </section>
+        </div>
         <div id="home_imgs">
             <img src="img/owners.jpg" alt="owners" id="owner">
             <img src="img/clean_car.jpg" alt="clean car" id="clean_car">
         </div>
-        <section id="images_home">
-
-        </section>
         <footer>
             <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
