added style to content page

--- a/car_detailing/contact.html
+++ b/car_detailing/contact.html
@@ -68,16 +68,18 @@
         <h1 id="phone">
             (123-456-7890)
         </h1>
-        <section id="pricing">
-            <p>
-                prices vary depending on services provided, state of car, make and model of car, and who is preforming
+        <div id="content_grid">
+            <p id="pricing">
+                prices vary depending on services provided, state of car, make and model of car, and who is
+                preforming
                 the service.
-                For all the info on pricing and services contact us through the phone number above or any of the social
+                For all the info on pricing and services contact us through the phone number above or any of the
+                social
                 media link provided below.
             </p>
-        </section>
-        <img src="img/falling_money.jpg" alt="money">
-        <img src="img/happy_car.jpg" alt="happy">
+            <img src="img/falling_money.jpg" alt="money" id="money">
+            <img src="img/happy_car.jpg" alt="happy" id="happy">
+        </div>
         <footer>
             <p>Busted knuckles &copy; 2024 - Barry Leidy</p>
             <p><a class="the-plan" href="site_plan.html">Site Plan</a></p>
